--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -122,45 +122,52 @@
         <wi-spinner name="SPINNER"></wi-spinner>
     </div>
 
-    <template id='import-block'>
-        <style media="screen">
-            .flexs>div {
-                border: 1px solid #ccc;
-                flex:1;
-                margin: 5px;
-                background: #fff;
-                padding: 5px;
-            }
-            div.lm_content {
-                display:flex;
-                flex-direction: column;
-            }
-        </style>
+    <template id='import-block' style="background: #F2F2F2;">
         <div>
-            <h2 style="text-align:center;">I2G Import Tool <a href="" ng-click="helpClick();"><i class="fa fa-question-circle"></i></a></h2>
+            <h2 style="text-align:center;">Create workflow <a href="" ng-click="helpClick();"></a></h2>
+            <!-- <i class="fa fa-question-circle"></i> -->
         </div>
-        <div style="flex:1; display:flex;flex-direction:column">
-            <div style="flex:1;display:flex; width:80%;margin:auto;"class="flexs">
-                <div>
-                    <div>
-                        <i class="glyphicon glyphicon-check"></i><span>well 1</span>
+        <div class=" modal-body">
+            <form class="form-horizontal col-sm-offset-2 col-sm-10 ">
+                <h5>input</h5>
+                <div class="form-group">
+                    <label class="control-label col-sm-2">Name:</label>
+                    <div class="col-sm-3">
+                        <input class="form-control">
                     </div>
-                    <div>
-                        <i class="glyphicon glyphicon-check"></i><span>well 1</span>
-                    </div>
-                    <div>
-                        <i class="glyphicon glyphicon-check"></i><span>well 1</span>
-                    </div>
-                    <div>
-                        <i class="glyphicon glyphicon-check"></i><span>well 1</span>
+                    <label class="control-label col-sm-2" >Host:</label>
+                    <div class="col-sm-3">
+                        <input type="email" class="form-control">
                     </div>
                 </div>
-                <div>
-                    <input type="text" name="" value="">
+                <div class="form-group">
+                    <label class="control-label col-sm-2">Post:</label>
+                    <div class="col-sm-3">
+                        <input class="form-control">
+                    </div>
+                    <label class="control-label col-sm-2" >Path:</label>
+                    <div class="col-sm-3">
+                        <input type="email" class="form-control">
+                    </div>
                 </div>
-                <div>3</div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2">Data Dir:</label>
+                    <div class="col-sm-3">
+                        <input class="form-control">
+                    </div>
+                    <div class="col-sm-2">
+                        <a href=""><i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i></a>
+                    </div>
+                </div>
+                <h5>run</h5>
+                <div class="form-group">
+                    <div class="col-sm-10"style="float: right;">
+                        <button class='btn btn-default'><span class="run-16x16"></span>&nbsp;Run</button>
+                    </div>
+                </div>
             </div>
         </div>
+
     </template>
 
     <template id="well-import">
