--- a/source/html/index.html
+++ b/source/html/index.html
@@ -128,6 +128,12 @@
     <template id='property-block'>
         <wi-properties name="WiProperties" list-config="myPropertiesConfig"></wi-properties>
     </template>
+    <template id="stack-header-control">
+        <div class="stack-header-control">
+            <i class="fa fa-caret-left" aria-hidden="true" id="previousBtn" title="Previous"></i>
+            <i class="fa fa-caret-right" aria-hidden="true" id="nextBtn" title="Next"></i>
+        </div>
+    </template>
 </body>
 
 </html>
