--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -3,14 +3,11 @@
 <head>
     <title>I2G Lightweight</title>
     <link rel="shortcut icon" href="img/icon/Well_Insight.ico" type="image/x-icon">
-
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/css/jquery-ui.css" rel="stylesheet">
     <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/css/themify-icons.css" rel="stylesheet">
-
     <link rel="stylesheet" type="text/css" href="vendor/css/toastr.min.css">
-
     <!-- color picker -->
     <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-colorpicker.min.css">
     <link rel="stylesheet" type="text/css" href="css/color-picker.css">
@@ -18,15 +15,11 @@
     <link rel="stylesheet" type="text/css" href="vendor/css/multiple-select.css">
     <link rel="stylesheet" href="vendor/css/select.css">
     <link rel="stylesheet" type="text/css" href="css/dialogs.css">
-
     <link rel="stylesheet" href="css/sprite_16.css">
     <link rel="stylesheet" href="css/sprite_32.css">
-
     <link rel='stylesheet' href='vendor/css/goldenlayout-base.css'>
     <link type="text/css" rel="stylesheet" href="vendor/css/goldenlayout-light-theme.css" />
-
     <link rel='stylesheet' href='vendor/css/nouislider.min.css'>
-
     <link href='css/wi-button.css' rel='stylesheet'>
     <link href='css/wi-dropdown.css' rel='stylesheet'>
     <link href='css/wi-toolbar.css' rel='stylesheet'>
@@ -35,17 +28,14 @@
     <link href='css/wi-context-menu.css' rel='stylesheet'>
     <link href='css/wi-treeview.css' rel='stylesheet'>
     <link href='css/wi-base-treeview.css' rel='stylesheet'>
-
     <link href='css/wi-status-bar.css' rel='stylesheet'>
     <link href='css/wi-slidingbar.css' rel='stylesheet'>
     <link href='css/wi-resizable-x.css' rel='stylesheet'>
     <link href='css/wi-reference-window.css' rel='stylesheet'>
     <link href='css/wi-multi-input.css' rel='stylesheet'>
     <link href='css/wi-custom-input.css' rel='stylesheet'>
-
     <link rel="stylesheet" href="css/wi-comboview.css">
     <link rel="stylesheet" href="css/wi-d3-comboview.css">
-
     <link rel="stylesheet" href="css/wi-inventory.css">
     <link rel="stylesheet" href="css/wi-curve-listing.css">
     <link href='css/wi-logplot.css' rel='stylesheet'>
@@ -95,11 +85,9 @@
     <script src="vendor/js/math.min.js"></script>
     <script src="vendor/js/select.js"></script>
     <script src="vendor/js/nouislider.min.js"></script>
-
     <!--select line style && line width-->
     <script src="vendor/js/angular-sanitize.min.js"></script>
     <script src="vendor/js/toastr.min.js"></script>
-
 </head>
 
 <body ng-app='wiapp' wi-initialization>
@@ -108,77 +96,160 @@
             <wi-tabset toggle='true' on-toggle='onRibbonToggle'>
                 <wi-tab heading="Main" closable='false'>
                     <wi-toolbar name="ExitToolbar" label="Exit" container="ribbon" disabled="true">
-                        <wi-button name="WellImport" icon="well-load-32x32" label="Well Import" container="ribbon" disabled="false" class="height65" handler="handlers.WellImportClicked">
-                        </wi-button>
-                        <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="false" class="height65" handler="handlers.ExitButtonClicked">
-                        </wi-button>
+                        <wi-button name="WellImport" icon="well-load-32x32" label="Well Import" container="ribbon" disabled="false" class="height65" handler="handlers.WellImportClicked"></wi-button>
+                        <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="false" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
                     </wi-toolbar>
             </wi-tabset>
         </div>
-        <div id='myLayout'>
-        </div>
+        <div id='myLayout'></div>
         <wi-user class="user-wrapper" name='user'></wi-user>
         <wi-context-menu name="ContextMenu"></wi-context-menu>
         <wi-spinner name="SPINNER"></wi-spinner>
     </div>
-
     <template id='import-block' style="background: #F2F2F2;">
+        <style media="screen">
+            textarea {
+                resize: none;
+            }
+            .flexs>div {
+                border: 1px solid #ccc;
+                flex: 1;
+                margin: 5px;
+                padding: 5px;
+                box-shadow: inset 1px 1px 1px #e1e1e1;
+                background-color: #ffffff;
+                border-radius: 5px;
+            }
+            div.lm_content {
+                display: flex;
+                flex-direction: column;
+            }
+            .lm_content {
+                background: #f4f4f4f4;
+            }
+
+            h5 {
+                color: blue;
+            }
+        </style>
         <div>
-            <h2 style="text-align:center;">Create workflow <a href="" ng-click="helpClick();"></a></h2>
-            <!-- <i class="fa fa-question-circle"></i> -->
+            <h2 style="text-align:center;">I2G Import Tool 																																															</h2>
         </div>
-        <div class=" modal-body">
-            <form class="form-horizontal col-sm-offset-2 col-sm-10 ">
-                <h5>input</h5>
-                <div class="form-group">
-                    <label class="control-label col-sm-2">Name:</label>
-                    <div class="col-sm-3">
-                        <input class="form-control">
+        <div style="flex:1; display:flex;flex-direction:column" class="modal-body">
+            <div style="flex:1;display:flex; width:100%;margin:auto;" class="flexs">
+                <div>
+                    <h5>Workflow Management</h5>
+                    <div class="col-sm-6">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>Check</th>
+                                    <th>Well</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <i class='glyphicon glyphicon-ok' style="color: black;"></i>
+                                    </td>
+                                    <td>well 1</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <i class='glyphicon glyphicon-ok' style="color: #ccc"></i>
+                                    </td>
+                                    <td>well 1</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
-                    <label class="control-label col-sm-2" >Host:</label>
-                    <div class="col-sm-3">
-                        <input type="email" class="form-control">
+                    <div class="col-sm-6">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>Well</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>well 1</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2">Post:</label>
-                    <div class="col-sm-3">
-                        <input class="form-control">
-                    </div>
-                    <label class="control-label col-sm-2" >Path:</label>
-                    <div class="col-sm-3">
-                        <input type="email" class="form-control">
-                    </div>
+                <div>
+                    <form class="form-horizontal">
+                        <h5>Create Workflow</h5>
+                        <div class="form-group">
+                            <label class="control-label col-sm-4">Name:</label>
+                            <div class="col-sm-6">
+                                <input class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-4">Host:</label>
+                            <div class="col-sm-6">
+                                <input type="email" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-4">Post:</label>
+                            <div class="col-sm-6">
+                                <input class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-4">Path:</label>
+                            <div class="col-sm-6">
+                                <input type="email" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-4">Data Dir:</label>
+                            <div class="col-sm-6">
+                                <input class="form-control">
+                            </div>
+                            <div class="col-sm-2">
+                                <a href="">
+                                    <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                        </div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label col-sm-2">Data Dir:</label>
-                    <div class="col-sm-3">
-                        <input class="form-control">
+                <div>
+                    <h5>Run Workflow</h5>
+                    <div class="form-group">
+                        <div class="col-sm-4">
+                            <button type="button" class="btn btn-default" name="button">Run</button>
+                        </div>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control">
+                        </div>
                     </div>
-                    <div class="col-sm-2">
-                        <a href=""><i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i></a>
-                    </div>
-                </div>
-                <h5>run</h5>
-                <div class="form-group">
-                    <div class="col-sm-10"style="float: right;">
-                        <button class='btn btn-default'><span class="run-16x16"></span>&nbsp;Run</button>
+                    <!-- <div class="form-group"><wi-progress-bar percent= 0></wi-progress-bar></div> -->
+                    <h5>Result</h5>
+                    <div class="form-group">
+                        <div class="col-sm-12">
+
+                            <textarea class="form-control" rows="5" id="comment"></textarea>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
     </template>
-
     <template id="well-import">
         @@include('./well-import/index.html')
     </template>
-
     <script src="js/simpleLayout.js.bundle.js"></script>
-
     <!-- Insert this line after script imports -->
     <script>
         if (window.module) module = window.module;
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
+    <script>
+        hljs.initHighlightingOnLoad();
     </script>
 </body>
 
