--- a/source/dialogs/curve-filter/curve-filter-modal.html
+++ b/source/dialogs/curve-filter/curve-filter-modal.html
@@ -120,9 +120,9 @@
                                     </div>
                                 </div>
                                 <div class="form-group" ng-if="wiModal.filterOp=='4'">
-                                    <label class="col-sm-5">Number of cutoff (smaller is better):</label>
+                                    <label class="col-sm-5">Number of cutoff: (must be smaller than filter range)</label>
                                     <div class="col-sm-5">
-                                        <input type="number" class="form-control wi-form-control" step="any" min='2'
+                                        <input type="number" class="form-control wi-form-control" step="any" min='5'
                                         ng-model="wiModal.cutoff">
                                     </div>
                                 </div>
