--- a/source/html/well-import/index.html
+++ b/source/html/well-import/index.html
@@ -27,6 +27,44 @@
     <wi-stage title="Setup new batch import task" icon="fa fa-file-code-o">
         <div style='flex:1;display:flex;flex-direction:column'>
             <div style='flex:1'>
+                <form class="form-horizontal">
+                    <h4 style='text-align:center'>Create batch import task</h4>
+                    <div class="form-group">
+                        <label style='text-align:right;' class="control-label col-sm-4">Name:</label>
+                        <div class="col-sm-6">
+                            <input class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label style='text-align:right;' class="control-label col-sm-4">Host:</label>
+                        <div class="col-sm-6">
+                            <input type="email" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label style='text-align:right;' class="control-label col-sm-4">Post:</label>
+                        <div class="col-sm-6">
+                            <input class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label style='text-align:right;' class="control-label col-sm-4">Path:</label>
+                        <div class="col-sm-6">
+                            <input type="email" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label style='text-align:right;' class="control-label col-sm-4">Data Dir:</label>
+                        <div class="col-sm-6">
+                            <input class="form-control">
+                        </div>
+                        <div class="col-sm-2">
+                            <a href="">
+                                <i class="fa fa-plus-circle fa-3x" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </wi-stage>
