--- a/source/html/wipm/index.html
+++ b/source/html/wipm/index.html
@@ -71,6 +71,7 @@
                 <div class="form-group  form-inline">
                     <button type="submit" class="btn btn-primary" ng-click="create.create_model()">Create</button>
                 </div>
+                <wi-button icon='exit-32x32' label='test-test' handler='handlers.testGetData'></wi-button>
             </form>
             <form ng-if="predict" ng-controller="predictFormController as predict">
                 <h3>Use model to predict data</h3>
