--- a/source/dialogs/curve-rescale/curve-rescale-modal.html
+++ b/source/dialogs/curve-rescale/curve-rescale-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
-                <h4><span class="curve-listing-16x16"></span>&nbsp;Rescale Curve</h4>
+                <h4><span class="curve-rescale-16x16"></span>&nbsp;Rescale Curve</h4>
             </div>
             <div class="modal-body dialog-style">
                 <form class="form-horizontal" action="" name="modalCurveRescale">
