--- a/source/dialogs/curve-split/curve-split-modal.html
+++ b/source/dialogs/curve-split/curve-split-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true" ng-disabled="wiModal.process">&times;</button>
-                <h4><span class=".cureve-splice-16x16"></span>&nbsp;Split Curve</h4>
+                <h4><span class="cureve-splice-16x16"></span>&nbsp;Split Curve</h4>
             </div>
             <div class="modal-body dialog-style">
                 <form class="form-horizontal" action="" name="modalSplitCurve">
