--- a/source/dialogs/formation-resistivity/formation-resistivity-modal.html
+++ b/source/dialogs/formation-resistivity/formation-resistivity-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Water Resistivity from Temperature and Salinity </h4>
+                <h4 class="modal-title"><span class="formation-resistivity-16x16"></span>&nbsp;Water Resistivity from Temperature and Salinity </h4>
             </div>
             <div class="modal-body dialog-style">
                 <p></p>
