--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -90,7 +90,6 @@
     <script src="vendor/js/angular-sanitize.min.js"></script>
     <script src="vendor/js/toastr.min.js"></script>
 
-
     <!-- <script src="vendor/js/angular-toastr.tpls.js"></script>
     <link rel="stylesheet" href="vendor/css/angular-toastr.css" /> -->
 
@@ -101,13 +100,13 @@
         <div class="ribbon-wrapper">
             <wi-tabset toggle='true' on-toggle='onRibbonToggle'>
                 <wi-tab heading="Main" closable='false'>
-                    <wi-toolbar name="ExitToolbar" label="Exit" container="ribbon" disabled="true">
-                        <wi-button name="ImportBlockButton" icon="arrow-left-32x32" label="Import Block" container="ribbon" disabled="false" class="height65" handler="handlers.ImportBlockButtonClicked">
+                    <wi-toolbar name="ExitToolbar" label="Exit" container="ribbon">
+                        <wi-button name="ImportBlockButton" icon="arrow-left-32x32" label="Import Block" container="ribbon" disabled="{{handlers.isDisabled()}}" class="height65" handler="handlers.ImportBlockButtonClicked">
                         </wi-button>
-                        <wi-button name="WipmButton" icon="fluid-zone-32x32" label="WIPM" container="ribbon" disabled="false" class="height65" handler="handlers.WipmButtonClicked">
+                        <wi-button name="WipmButton" icon="fluid-zone-32x32" label="WIPM" container="ribbon" disabled="{{handlers.isDisabled()}}" class="height65" handler="handlers.WipmButtonClicked">
                         </wi-button>
-                        <wi-button name="WellImport" icon="well-load-32x32" label="Well Import" container="ribbon" disabled="false" class="height65" handler="handlers.WellImportClicked"></wi-button>
-                        <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="false" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
+                        <wi-button name="WellImport" icon="well-load-32x32" label="Well Import" container="ribbon" disabled="{{handlers.isDisabled()}}" class="height65" handler="handlers.WellImportClicked"></wi-button>
+                        <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="{{handlers.isDisabled()}}" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
                     </wi-toolbar>
                 </wi-tab>
             </wi-tabset>
@@ -143,9 +142,7 @@
                 color: blue;
             }
         </style>
-        <div>
-            <h2 style="text-align:center;">I2G Import Tool 																																															</h2>
-        </div>
+        <h3 class='content-heading' style="text-align:left;">I2G Import Tool</h3>
         <div style="flex:1; display:flex;flex-direction:column" class="modal-body">
             <div style="flex:1;display:flex; width:100%;margin:auto;" class="flexs">
                 <div>
@@ -242,7 +239,6 @@
                     <h5>Result</h5>
                     <div class="form-group">
                         <div class="col-sm-12">
-
                             <textarea class="form-control" rows="5" id="comment"></textarea>
                         </div>
                     </div>
@@ -257,14 +253,12 @@
     <template id="well-import">
         @@include('./well-import/index.html')
     </template>
+    
     <script src="js/simpleLayout.js.bundle.js"></script>
+    <script src="http://192.168.0.91:33333/socket.io/socket.io.js"></script>
     <!-- Insert this line after script imports -->
     <script>
         if (window.module) module = window.module;
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
-    <script>
-        hljs.initHighlightingOnLoad();
     </script>
 </body>
 
