--- a/source/html/wipm/createForm.html
+++ b/source/html/wipm/createForm.html
@@ -1,4 +1,5 @@
 <form ng-if="create" ng-controller="createFormController as create" id="create">
+    <h3>Create model</h3>
     <div class="form-group form-inline">
         <label class="control-label col-sm-3">Model name</label>
         <input class="form-control wi-form-control" type="text" class="form-control" ng-model="create.name" autofocus required>
