--- a/source/html/wipm/listModel.html
+++ b/source/html/wipm/listModel.html
@@ -1,4 +1,5 @@
 <div class="container-fluid" ng-if="list" ng-controller="listModelController as list" id="list">
+    <h3>List model</h3>
     <table class="table table-bordered">
         <thead>
             <tr>
