--- a/source/html/wipm/retrainForm.html
+++ b/source/html/wipm/retrainForm.html
@@ -1,4 +1,6 @@
+
 <form ng-if="retrain" ng-controller="retrainFormController as retrain" id="retrain">
+    <h3>Retrain</h3>
     <div class="form-group form-inline">
         <label class="control-label col-sm-3">Model name</label>
         <select ng-model="retrain.model"
