--- a/source/html/wipm/predictForm.html
+++ b/source/html/wipm/predictForm.html
@@ -1,4 +1,5 @@
 <form ng-if="predict" ng-controller="predictFormController as predict" id="predict">
+    <h3>Predict</h3>
     <div class="form-group form-inline">
         <label class="control-label col-sm-3">Model name</label>
         <select ng-options="x as x.name for x in predict.models track by x.id" 
