--- a/source/dialogs/range-specific/range-specific-modal.html
+++ b/source/dialogs/range-specific/range-specific-modal.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" 
+                <button type="button" class="close"
                         ng-click="wiModal.onCancelButtonClicked()"
                         aria-hidden="true">&times;
                 </button>
@@ -15,7 +15,7 @@
                         <div class="col-sm-9">
                             <input type="number" class="form-control" step="0.0001"
                                    name='topDepth' ng-model="wiModal.depthRange[0]"
-                                   wi-decimal-places required>
+                                   wi-decimal-places="4" required ng-blur="wiModal.verifyRange()">
                         </div>
                     </div>
                     <div class="form-group">
@@ -24,8 +24,7 @@
                             <input type="number" class="form-control" step="0.0001"
                                    name="bottomDepth"
                                    ng-model="wiModal.depthRange[1]"
-                                   wi-enter="wiModal.onOkButtonClicked()"
-                                   wi-decimal-places required>
+                                   wi-decimal-places="4" required ng-blur="wiModal.verifyRange()">
                         </div>
                     </div>
                 </form>
