--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -184,7 +184,7 @@
                         <div ng-show="wiModal.tabFlags[1] == 'true'" class="container-fluid padding-top-2em padding-bottom-2em">
                             <form action="" class="form-horizontal">
                                 <div class="width-95-percent float-left">
-                                    <table class="text-on-table table table-bordered curveTable">
+                                    <table class="text-on-table table table-bordered curveTable ui-select-small">
                                         <thead>
                                             <tr>
                                                 <th>Curve</th>
@@ -301,7 +301,7 @@
                         <div ng-show="wiModal.tabFlags[2] == 'true'" class="container-fluid padding-top-2em padding-bottom-2em">
                             <form action="" class="form-horizontal">
                                 <div class="col-sm-11 padding-0">
-                                    <table style="border-collapse: collapse;" class="text-on-table table table-bordered shadingTable col-sm-12">
+                                    <table style="border-collapse: collapse;" class="text-on-table table table-bordered shadingTable col-sm-12 ui-select-small">
                                         <thead>
                                             <tr>
                                                 <td class="text-center"><strong>Limit 1</strong></td>
