order curve button

--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -293,6 +293,13 @@
                                     <button class="btn btn-default" ng-click="wiModal.addRowCurve();">
                                         <span class="plus-16x16"></span>
                                     </button>
+                                    <br><br>
+                                    <button class="btn btn-default" ng-click="wiModal.arrowUpCurve();">
+                                        <span class="arrow-up-16x16"></span>
+                                    </button>
+                                    <button class="btn btn-default" ng-click="wiModal.arrowDownCurve();">
+                                        <span class="arrow-down-16x16"></span>
+                                    </button>
                                 </div>
                             </form>
                         </div>
