--- a/source/html/wipm/predictForm.html
+++ b/source/html/wipm/predictForm.html
@@ -11,31 +11,43 @@
     <div class="form-group form-inline container-fluid" style="padding-left: 0">
         <label class="control-label col-sm-3">Chose obs</label>
         <label class="col-sm-3">Well
-            <select ng-options="x as x.name for x in predict.wells track by x.idWell" 
-                    ng-model="predict.well" 
-                    ng-change="predict.changeWell()"
-                    style="width:100%; font-weight: normal"
-                    class="form-control wi-form-control"
-                    required>
-            </select>
+            <ui-select ng-model="predict.well"
+                        on-select="predict.changeWell()"
+                        class="normal-text">
+                <ui-select-match placeholder='Select a curve'>
+                    {{predict.well.name}}
+                </ui-select-match>
+                <ui-select-choices  position="down"
+                                    repeat='well in predict.wells | filter:{name:$select.search} track by well.idWell' >
+                    <div class="normal-text">{{well.name}}</div>
+                </ui-select-choices>
+            </ui-select>
         </label>
         <label class="control-label col-sm-3">Dataset
-            <select ng-options="x as x.name for x in predict.datasets track by x.idDataset" 
-                    ng-model="predict.dataset" 
-                    ng-change="predict.changeDataset()"
-                    style="width:100%; font-weight: normal"
-                    class="form-control wi-form-control"
-                    required>
-            </select>
+            <ui-select ng-model="predict.dataset"
+                on-select="predict.changeDateset()"
+                class="normal-text">
+                <ui-select-match placeholder='Select a dataset'>
+                    {{predict.dataset.name}}
+                </ui-select-match>
+                <ui-select-choices  position="down"
+                                    repeat='dataset in predict.datasets | filter:{name:$select.search} track by dataset.idDataset' >
+                    <div class="normal-text">{{dataset.name}}</div>
+                </ui-select-choices>
+            </ui-select>
         </label>
         <label class="control-label col-sm-3">Curve
-            <select ng-options="x as x.name for x in predict.curves track by x.idCurve" 
-                    ng-model="predict.curve" 
-                    ng-change="predict.changeCurve()"
-                    style="width:100%; font-weight: normal"
-                    class="form-control wi-form-control"
-                    required>
-            </select>
+            <ui-select ng-model="predict.curve"
+                        on-select="predict.changeCurve()"
+                        class="normal-text">
+                <ui-select-match placeholder='Select a curve'>
+                    {{predict.curve.name}}
+                </ui-select-match>
+                <ui-select-choices  position="down"
+                                    repeat='curve in predict.curves | filter:{name:$select.search} track by curve.idCurve' >
+                    <div class="normal-text">{{curve.name}}</div>
+                </ui-select-choices>
+            </ui-select>
         </label>
     </div>
     <!-- <div class="form-group form-inline">
