--- a/source/dialogs/track-bulk-update/track-bulk-update-modal.html
+++ b/source/dialogs/track-bulk-update/track-bulk-update-modal.html
@@ -9,7 +9,7 @@
                 <p></p>
                 <form class='form-horizontal form-condensed'>
                     <table class="text-on-table table table-bordered">
-                        <thead>
+                        <thead class="background-header-table">
                             <tr>
                                 <th rowspan="2" width="5%"></th>
                                 <th rowspan="2" width="10%">Type</th>
