--- a/source/html/online-inventory/index.html
+++ b/source/html/online-inventory/index.html
@@ -9,13 +9,17 @@
         margin-right: 1em;
     }
     .panel-heading {
+        display:flex;
+        padding: 5px 15px;
         height: 42px;
     }
     .panel-heading > h4 {
+        line-height: 30px;
+        flex: 1;
         margin: 0;
     }
     .panel-heading button.btn {
-        margin-top: -4px;
+        margin-left: 5px;
     }
 </style>
 <div style="flex:1;display:flex;flex-direction:row;border: 1px solid black;">
