--- a/source/dialogs/curve-bulk-update/curve-bulk-update-modal.html
+++ b/source/dialogs/curve-bulk-update/curve-bulk-update-modal.html
@@ -4,7 +4,7 @@
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
                 <div class="row">
-                    <h4 class="modal-title col-sm-10"><span class="images-properties-16x16"></span>&nbsp;Curve bulk update</h4>
+                    <h4 class="modal-title col-sm-10"><span class="curve-bolk-16x16"></span>&nbsp;Curve bulk update</h4>
                     <div class="col-sm-2">
                         <button type="button" ng-click="wiModal.zoomInDialog();" class="btn btn-default">
                             <span class="zoom-in-16x16"></span>
